# thuc-tap-prj

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0001_initial.py
docs/: system-design.md
scripts/: benchmark_chunking.py  seed_sample_docs.py
src/config/: settings.py
src/core/entities/: __init__.py  chunk.py  document.py  query.py
src/core/interfaces/: __init__.py  document_repo.py  embedding.py  file_storage.py  llm.py  vector_store.py
src/core/services/: __init__.py  chunking_service.py  ingestion_service.py
src/infrastructure/database/: document_repo.py  models.py  session.py
src/infrastructure/embedding/: __init__.py  openai_provider.py
src/infrastructure/file_storage/: __init__.py  local_storage.py
src/infrastructure/parsers/: __init__.py  pdf_parser.py  unstructured_parser.py
src/infrastructure/vector_store/: __init__.py  qdrant_store.py
