[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "rag-qna-bot"
version = "0.1.0"
description = "RAG Q&A Bot for Vietnamese legal documents (penalty decrees)"
requires-python = ">=3.11"

dependencies = [
    # API Framework
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "python-multipart==0.0.20",

    # Config
    "pydantic==2.10.3",
    "pydantic-settings==2.7.0",
    "python-dotenv==1.0.1",

    # Database
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",

    # Vector Store
    "qdrant-client==1.12.1",

    # AI Providers
    "openai==1.57.4",
    "anthropic==0.40.0",
    "httpx==0.28.1",  # shared HTTP client

    # File Parsing
    "pypdf==5.1.0",
    "unstructured[pdf]==0.16.11",

    # Async Task Queue
    "celery==5.4.0",
    "redis==5.2.1",
    "flower==2.0.1",

    # Utilities
    "tenacity==9.0.0",       # retry logic
    "structlog==24.4.0",     # structured logging
    "tiktoken==0.8.0",       # token counting for chunking
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "httpx==0.28.1",       # for TestClient
    "factory-boy==3.3.1",  # test fixtures
    "ruff==0.8.3",         # linter + formatter
    "mypy==1.13.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "UP", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/migrations/*"]
